--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -726,7 +726,7 @@
                     <h1>Streamline Your Field Service Operations</h1>
                     <p>Servizo is a comprehensive web-based platform designed to streamline service operations between administrators, field workers, and customers. Enhance communication and transparency with automated workflows.</p>
                     <div class="hero-buttons">
-                        <button class="primary-button"><a href="/auth/register"  class="text-decoration-none">Sign Up</a></button>
+                        <button class="primary-button"><a href="/auth/register"  class="text-decoration-none text-black">Sign Up</a></button>
                         
                     </div>
                     <div class="mobile-auth">
