--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,6 +11,10 @@
     <%= typeof title !=="undefined" ? title : "Field Service Management" %>
   </title>
 
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+
+
+
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
