change reset password url

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,7 +11,7 @@
     <%= typeof title !=="undefined" ? title : "Field Service Management" %>
   </title>
 
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/favicon.png">
 
 
 
